Fix some Flex layout issues. Improve overflow rendering

--- a/packages/bvaughn-architecture-demo/components/inspector/Collapsible.module.css
+++ b/packages/bvaughn-architecture-demo/components/inspector/Collapsible.module.css
@@ -7,7 +7,6 @@
   color: var(--value-type-object);
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
   min-height: 1rem;
 }
 
