--- a/packages/bvaughn-architecture-demo/components/inspector/HTMLCollapsible.module.css
+++ b/packages/bvaughn-architecture-demo/components/inspector/HTMLCollapsible.module.css
@@ -11,7 +11,6 @@
   color: var(--value-type-object);
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
   min-height: 1rem;
 }
 
